bynkc/tests/fixtures/negative/31_sum_unknown_variant/input.bynk
commons test {
  type Status = enum { Pending, Active, Done }

  fn bad() -> Status {
    Status.Nope
  }
}
